# rp2040-smp

./: CMakeLists.txt  freeRTOS_import.cmake  readme.MD
hello-multicore/: CMakeLists.txt  main.c
producer-consumer/: CMakeLists.txt  main.c
